# GatorTracer

./: README.md  pyproject.toml
.github/workflows/: main.yml
examples/: analysis_example.py  objective_lint.csv  status_false.csv
examples/configs/: exmaple_in.json
examples/tables/: MainTable.csv
examples/tables/CheckTables/: Command.csv  ConfirmFileExists.csv  CountCommandOutput.csv  CountCommits.csv  CountFileWords.csv  CountMarkdownTags.csv  CountMultipleLineComments.csv  CountSingleLineComments.csv  MatchCommandFragment.csv  MatchFileFragment.csv
gatortracer/: __init__.py  analysis_example.py  check_tables.py  cli.py  config_console.py  gui_input.py  json_fetch.py
json_fetch/: __init__.py  check_tables.py  cli.py  config_console.py  gh_token.py  json_fetch.py
json_fetch/config/: exclude.json  include.json  out.json
json_fetch/data/: exclude.json  include.json  out.json
