[tool.poetry]
name = "gatortracer"
version = "0.1.0"
description = ""
authors = ["Yanqiao4396 <chen02@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
PyGithub = "^1.58.2"
customtkinter = "^5.2.0"
dash = "^2.10.2"
plotly = "^5.15.0"
glom = "^23.3.0"
typer = "<0.7.0,>=0.6.1"
pprintjson = "^1.4.2"
polars = "^0.18.5"
rich = "^13.4.2"
pyarrow = "^12.0.1"
platformdirs = "^3.8.1"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gatortracer = 'gatortracer.cli:cli'